--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reclaimprotocol/js-sdk": "^2.1.1",
+    "@worldcoin/minikit-js": "^1.3.0",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0-rc-66855b96-20241106",
