--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@reclaimprotocol/js-sdk": "^2.1.1",
     "@worldcoin/minikit-js": "^1.3.0",
     "class-variance-authority": "^0.7.1",
